--- a/src/components/dashboard/common/sidebar/Sidebar.scss
+++ b/src/components/dashboard/common/sidebar/Sidebar.scss
@@ -2,12 +2,12 @@
 
 section.sidebar {
     width: 250px;
-    height: 100vh;
+    height: 100%;
     position: fixed;
     padding: 10px;
-    background-color: $background;
+    background-color: $light;
     transition: all 0.4s;
-    z-index: 1;
+    z-index: 2;
 
     .logo {
         img {
@@ -88,6 +88,33 @@ section.sidebar {
 
             }
         }
+
+        .listItem {
+            ul {
+                list-style: none;
+                margin: 15px 0;
+
+                a {
+                    padding: 12px 10px;
+                    border-radius: 12px;
+                    display: block;
+
+                    &:hover {
+                        background-color: rgba($color: $secondary, $alpha: 0.4);
+                    }
+
+                    &.active {
+                        background-color: rgba($color: $secondary, $alpha: 0.4);
+
+                    }
+
+                }
+
+                // li {
+
+                // }
+            }
+        }
     }
 }
 
@@ -95,6 +122,8 @@ section.sidebar {
 
     section.sidebar {
         transform: translateX(-250px);
+        top: 90px;
+        height: calc(100vh - 90px);
 
         &.toggle {
             transform: translateX(0px);
